[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Characters/VillagerSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Source/NPCs/DialougeArea.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 0.0

[node name="VillageGirl" type="KinematicBody2D"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -7, -21 )
__meta__ = {
"_edit_lock_": true
}

[node name="DialougeArea" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="DialougeShape" type="CollisionShape2D" parent="DialougeArea"]
shape = SubResource( 1 )

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2( -1, -3 )
shape = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -30.0
margin_top = -65.0
margin_right = 31.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Starter" type="Label" parent="Panel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 61.0
margin_bottom = 66.0
size_flags_vertical = 1
text = "Here's a Starter Net"
align = 1
autowrap = true

[node name="Panel2" type="Panel" parent="."]
margin_left = -61.0
margin_top = -78.0
margin_right = 59.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StandHere" type="Label" parent="Panel2"]
margin_left = 10.0
margin_top = 8.0
margin_right = 109.0
margin_bottom = 39.0
text = "Stand here and press 'Enter'"
autowrap = true

[node name="Panel3" type="Panel" parent="."]
visible = false
margin_left = -61.0
margin_top = -78.0
margin_right = 59.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="Label" parent="Panel3"]
margin_left = 10.0
margin_top = 8.0
margin_right = 109.0
margin_bottom = 39.0
text = "I'll Heal your team!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="DialougeArea" to="DialougeArea" method="_on_DialougeArea_body_entered"]
[connection signal="body_exited" from="DialougeArea" to="DialougeArea" method="_on_DialougeArea_body_exited"]
